# xrpl-amm-clob

./: .env.example  .gitignore  environment.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
apps/: run_empirical.py  run_model.py
artifacts/: README.md
configs/empirical/: pipeline_run.default.json
data/: config.share.example
docs/: ARCHITECTURE.md  COMMANDS.md
empirical/: README.md
empirical/scripts/: analyse.py  build_input_from_window.py  build_tx_map_100915230_100916230.py  check_delta_sharing_freshness.py  delta_sharing_check_freshness.py  delta_sharing_test_profile.py  discovery.py  download_clob_offers_range.py  empirical_build_full_tx_and_prebook_ledgers.py  empirical_build_model_input.py  empirical_build_pending_tx_hashes.py  empirical_check_parquet_bounds.py  empirical_compare_rolling.py  empirical_compare_single.py  empirical_download_clob_offers_from_ledger_list.py  empirical_enrich_clob_with_local_metadata.py  empirical_export_two_week_window.sh  empirical_export_window.py  empirical_fetch_tx_metadata_quicknode.py  empirical_monitor_prebook_parallel.sh  empirical_reconstruct_real_paths.py  empirical_run_prebook_parallel.sh  empirical_run_prebook_quicknode_pool.sh  export_amm_fees_window_20251216.py  export_rusd_xrp_window_20251216.py  extract_ledger_100894647_20251215.py  fetch_ledger_dump_and_csv.py  inspect_hybrid_path_one_tx.py  pipeline_build_model_input.py  pipeline_export_window.py  research_analyse_traces.py  research_check_parquet_bounds.py  research_compare_rolling.py  research_compare_single.py  research_enrich_clob_with_tx_index.py  scan_hybrid_candidates_20251201.py  scan_ndjson_stats.py  split_ledger_list_for_parallel.py  split_tx_hashes_for_parallel.py  test_delta_sharing_profile.py
empirical/scripts_archive/: README.md  compare_rusd_xrp_100894647_vs_model.py  extract_rusd_xrp_from_ledger_json.py  inspect_window.py  mixed_timeline_and_daily_stats_100915230_100916230.py  overview_rusd_xrp_window_20251201.py  trace_ledger_rusd_xrp_1215.py  verify_clob_direction_20251201.py
model/: README.md
notebooks/: daily_pair_dual_replay.ipynb  delta_sharing_vs_metadata_path_demo.ipynb  single_tx_dual_replay.ipynb
scripts/: demo.py
src/real/: run_amm_only_from_input.py  run_hybrid_one_tx_from_windows.py
src/xrpl_router/: __init__.py  amm.py  amm_context.py  amm_liquidity.py  ammliquidity.py  book_offers.py  book_step.py  clob.py  core.py  efficiency_scan.py  exec_modes.py  flow.py  path_builder.py  router.py  steps.py
tests/: _legacy_conftest.py  conftest.py  test_alpha_qstar_sanity.py  test_fibonacci_cap.py  test_send_max_budget.py  test_slippage_monotonic.py
tests/ci/: test_empirical_aliases.py  test_empirical_dry_run.py  test_smoke_imports.py
tests/example/: test_examples_from_whitepaper.py
tests/unit/: test.py  test_alpha_qstar_sanity.py  test_amm.py  test_aq.py  test_book_offer_builder.py  test_book_step_strict_quality_priority.py  test_clob.py  test_core.py  test_core_amounts.py  test_core_fmt.py  test_core_ordering.py  (+7 more)
(+10 files in other folders)
