[project]
name = "xrpl-router"                                          # distribution name (can differ from import package)
version = "0.0.1"
description = "XRPL AMM/CLOB routing simulation (offline)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Team", email = "you@example.com" }]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]            # use src layout
include = ["xrpl_router*"] # import package name and subpackages

[tool.setuptools]
package-dir = { "" = "src" } # top-level package directory points to src
